--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "jade": "0.28"
+    "jade": "0.28",
+    "stylus": "0.32",
+    "robotskirt": "2.7",
+    "highlight.js": "7.3",
+    "async": "0.2",
+    "semver": "1.1",
+    "fs-extra": "0.5"
   }
 }
