--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "7.3",
     "async": "0.2",
     "semver": "1.1",
-    "fs-extra": "0.5"
+    "fs-extra": "0.5",
+    "commander": "0.6"
   }
 }
