--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "0.2",
     "semver": "1.1",
     "fs-extra": "0.5",
-    "commander": "0.6"
+    "commander": "0.6",
+    "slug": "0.2"
   }
 }
